# CPP-StudyProjects

./: README.md
C++.Lab9.Pool.Allocator/: CMakeLists.txt  PoolRealization.h  Readme  Relization.cpp  main.cpp  qwe.txt  qwe11.txt  qwe2.txt  qwe22.txt
Lab-10/: CMakeLists.txt  Readme  main.cpp  requests.cpp  requests.h
Lab-6/labwork-6-Maxiiis1/: README.md  test.txt
Lab-6/labwork-6-Maxiiis1/lib/: parser.cpp  parser.h
Lab-6/labwork-6-Maxiiis1/tests/: test_parser.cpp
lab11.STL_ZIP/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
